--- a/lang/lang-fr.xml
+++ b/lang/lang-fr.xml
@@ -3475,4 +3475,6 @@ L'administrateur</string>
 <string id="Retype choosen password">Retapez le mot de passe</string>
 <string id="Allow empty introductions">Autoriser les introductions vides</string>
 <string id="Copy all events from old calendar">Copier tous les événements de l'ancien agenda</string>
+
+<string id="When notification is selected, also notify the author">Mettre en copie de la notification l'auteur de la création, mise à jour ou suppression d'un événement d'agenda</string>
 </fr>
