--- a/lang/lang-fr.xml
+++ b/lang/lang-fr.xml
@@ -3334,7 +3334,7 @@
 <string id="Back to directory">Retour à l'annuaire</string>
 <string id="Send email notifications to the imported users">Envoi des notifications vers les utilisateurs importés</string>
 <string id="Send an email for each created or updated account">Envoi d'un email pour chaque compte créé ou mis à jour</string>
-<string id="The groupe of this directory have delegate administration. If you want to update rights on it you should probably contact the delegate administrator.">Cette anuaire est rataché à un groupe dont l'administration est délégué. Si vous voulez modifier les droits sur ce dernier vous devriez prendre contact avec l'administrateur délégué.</string>
+<string id="The groupe of this directory have delegate administration. If you want to update rights on it you should probably contact the delegate administrator.">Cette annuaire est rattaché à un groupe dont l'administration est déléguée. Si vous voulez modifier les droits sur ce dernier vous devriez prendre contact avec l'administrateur délégué.</string>
 
 
 
