--- a/lang/lang-en.xml
+++ b/lang/lang-en.xml
@@ -1648,7 +1648,7 @@ Cordially
 
 The administrator</string>
 <string id="Appointment modified by ">Event updated by </string>
-<string id=""></string>
+<string id="The article head is mandatory">The introduction is mandatory</string>
 <string id=""></string>
 <string id=""></string>
 <string id=""></string>
