Allow relative upload path in site settings

--- a/ovidentia/lang/lang-fr.xml
+++ b/ovidentia/lang/lang-fr.xml
@@ -1211,7 +1211,7 @@
 <string id="File manager max user directory size">Espace maximum occupé par un répertoire utilisateur</string>
 <string id="File manager max total size">Espace maximum occupé par le gestionnaire de fichiers</string>
 <string id="ERROR: You must provide all file manager size limits.">ERREUR : vous devez fournir toutes les tailles limites pour le gestionnaire de fichiers.</string>
-<string id="ERROR: The upload path must be an absolute path.">ERREUR : le chemin du répertoire de stockage des fichiers à télécharger doit être absolu.</string>
+<string id="ERROR: The upload path must be an absolute path or relative to ovidentia root folder.">ERREUR : le chemin du répertoire de stockage des fichiers à télécharger doit être absolu ou relative au dossier racine d'ovidentia.</string>
 <string id="Access restriction">Restriction d'accès</string>
 <string id="Are you sure you want to delete this event category">Voulez-vous vraiment effacer cette catégorie d'événement</string>
 <string id="Delete event category">Effacer la catégorie d'événement</string>
