--- a/ovidentia/lang/lang-fr.xml
+++ b/ovidentia/lang/lang-fr.xml
@@ -2530,7 +2530,7 @@
 <string id="The root folder cannot be cutted">Le répertoire racine ne peut être coupé</string>
 <string id="This folder does not exists">Ce répertoire n'existe pas</string>
 <string id="The upload path is not set">Le répertoire d'upload n'est pas défini</string>
-<string id="The upload path is not a dir">Le chemin du répertoire d'upload n'est pas valide</string> 
+<string id="The upload path is not a dir">Le chemin du répertoire d'upload n'est pas valide</string>
 <string id="Groups directories">Annuaires de groupes</string>
 <string id="View directory entry for">Visualiser la fiche annuaire pour</string>
 <string id="Categories, topics and articles">Catégories, thèmes et articles</string>
@@ -3478,4 +3478,5 @@ L'administrateur</string>
 
 <string id="When notification is selected, also notify the author">Mettre en copie de la notification l'auteur de la création, mise à jour ou suppression d'un événement d'agenda</string>
 <string id="Search engine user interface">Interface utilisateur du moteur de recherche</string>
+<string id="Administration and user menu">Menu d'administration et utilisateur</string>
 </fr>
