--- a/lang/lang-fr.xml
+++ b/lang/lang-fr.xml
@@ -3477,4 +3477,5 @@ L'administrateur</string>
 <string id="Copy all events from old calendar">Copier tous les événements de l'ancien agenda</string>
 
 <string id="When notification is selected, also notify the author">Mettre en copie de la notification l'auteur de la création, mise à jour ou suppression d'un événement d'agenda</string>
+<string id="Date of account creation">Date de création du compte</string>
 </fr>
