Added "Date of account creation" information on user modify page.

--- a/ovidentia/lang/lang-fr.xml
+++ b/ovidentia/lang/lang-fr.xml
@@ -3478,4 +3478,5 @@ L'administrateur</string>
 
 <string id="When notification is selected, also notify the author">Mettre en copie de la notification l'auteur de la création, mise à jour ou suppression d'un événement d'agenda</string>
 <string id="Search engine user interface">Interface utilisateur du moteur de recherche</string>
+<string id="Date of account creation">Date de création du compte</string>
 </fr>
