--- a/ovidentia/lang/lang-fr.xml
+++ b/ovidentia/lang/lang-fr.xml
@@ -3488,4 +3488,5 @@ L'administrateur</string>
 <string id="New password has to be different from the current one.">Le nouveau mot de passe doit être different de l'actuel.</string>
 <string id="For security reason you have to change your password.">Pour des raisons de sécurité, vous devez effectuer un changement de mot de passe.</string>
 <string id="Update password">Modification de mot de passe</string>
+<string id="Password has to respect those following rules">Le mot de passe doit respecter les exigences de complexité suivantes</string>
 </fr>
