--- a/ovidentia/lang/lang-fr.xml
+++ b/ovidentia/lang/lang-fr.xml
@@ -3491,5 +3491,5 @@ L'administrateur</string>
 <string id="Password has to respect those following rules">Le mot de passe doit respecter les exigences de complexité suivantes</string>
 
 <string id="Modifiable by the user">Modifiable par l'utilisateur</string>
-
+<string id="Your changes are saved">Vos modifications ont été enregistrées</string>
 </fr>
