Fix issue when unzipping file on utf-8 site.

--- a/ovidentia/lang/lang-fr.xml
+++ b/ovidentia/lang/lang-fr.xml
@@ -3492,4 +3492,5 @@ L'administrateur</string>
 
 <string id="Modifiable by the user">Modifiable par l'utilisateur</string>
 <string id="Your changes are saved">Vos modifications ont été enregistrées</string>
+<string id="Can not unzip file: %s">Dézippage du fichier suivant impossible: %s</string>
 </fr>
