--- a/ovidentia/lang/lang-fr.xml
+++ b/ovidentia/lang/lang-fr.xml
@@ -3495,5 +3495,5 @@ L'administrateur</string>
 <string id="Can not unzip file: %s">Dézippage du fichier suivant impossible: %s</string>
 
 <string id="Determine automatically">Déterminer automatiquement</string>
-
+<string id="Install or update the addons provided in this package (optional)">Installer ou mettre à jour les modules fournis dans cette archive (optionnel)</string>
 </fr>
