--- a/ovidentia/lang/lang-fr.xml
+++ b/ovidentia/lang/lang-fr.xml
@@ -3496,4 +3496,5 @@ L'administrateur</string>
 
 <string id="Determine automatically">Déterminer automatiquement</string>
 <string id="Install or update the addons provided in this package (optional)">Installer ou mettre à jour les modules fournis dans cette archive (optionnel)</string>
+<string id="Addons installed without errors">Les modules ont été installés sans erreurs</string>
 </fr>
