Fix directory entry delete

--- a/ovidentia/lang/lang-fr.xml
+++ b/ovidentia/lang/lang-fr.xml
@@ -1933,7 +1933,7 @@
 <string id="Search engine">Moteur de recherche</string>
 <string id="Search2">Recherche</string>
 <string id="Search engine configuration">Configuration du moteur de recherche</string>
-<string id="Do you really want to delete the contact ?">Voulez-vous vraiment supprimer cette fiche d\'annuaire ?</string>
+<string id="Do you really want to delete the contact ?">Voulez-vous vraiment supprimer cette fiche d'annuaire ?</string>
 <string id="Don't display in file manager?">Ne pas afficher dans le gestionnaire de fichiers ?</string>
 <string id="Hidden">Caché</string>
 <string id="No mail account">Il n'y a pas de compte de messagerie</string>
