disable installed addon upgrade after ovidentia upgrade. Add a link to homepage

--- a/ovidentia/lang/lang-fr.xml
+++ b/ovidentia/lang/lang-fr.xml
@@ -3505,4 +3505,5 @@ L'administrateur</string>
 <string id="Sources Version %s">Version du code source %s</string>
 <string id="Database Version %s">Version de la base de donnés %s</string>
 <string id="Switch to https">Basculer vers https</string>
+<string id="Continue to home page">Continuer vers la page d'accueil</string>
 </fr>
