Add a checkbox to authenticate in full screen

--- a/ovidentia/lang/lang-fr.xml
+++ b/ovidentia/lang/lang-fr.xml
@@ -3506,4 +3506,5 @@ L'administrateur</string>
 <string id="Database Version %s">Version de la base de donnés %s</string>
 <string id="Switch to https">Basculer vers https</string>
 <string id="Continue to home page">Continuer vers la page d'accueil</string>
+<string id="Fullscreen authentication">Authentification en plein écran</string>
 </fr>
