--- a/ovidentia/lang/lang-fr.xml
+++ b/ovidentia/lang/lang-fr.xml
@@ -3520,4 +3520,5 @@ L'administrateur</string>
 <string id="The directory entry %s has been created">La fiche d'annuaire %s à été crée</string>
 <string id="Line %d:">Ligne %d :</string>
 <string id="Do you really want to update Ovidentia from %s to %s?">Voulez-vous vraiment mettre à jour Ovidentia de %s à %s?</string>
+<string id="Package %s is not valid, please check dependencies">L'archive %s n'est pas valide, veuillez vérifier les dépendances</string>
 </fr>
