--- a/ovidentia/lang/lang-fr.xml
+++ b/ovidentia/lang/lang-fr.xml
@@ -2217,7 +2217,7 @@
 <string id="Users connections history:">Historique des connexions des utilisateurs :</string>
 <string id="Enabled">Activé</string>
 <string id="Disabled">Désactivé</string>
-<string id="Delete logs before (dd/mm/yyyy)">Effacer les historiques antérieurs au (jj/mm/aaaa)</string>
+<string id="Delete logs before">Effacer les historiques antérieurs au</string>
 <string id="Collective directories">Répertoires collectifs</string>
 <string id="File downloads">Téléchargements de fichiers</string>
 <string id="Article topics">Thèmes d'articles</string>
