Added option to suppress certificate validation in smtp.
To avoid PHP 5.6 certificate verification failure: (see
https://github.com/PHPMailer/PHPMailer/wiki/Troubleshooting#php-56-certificate-verification-failure
)

--- a/ovidentia/lang/lang-fr.xml
+++ b/ovidentia/lang/lang-fr.xml
@@ -3524,4 +3524,8 @@ L'administrateur</string>
 <string id="Edit article">Modifier l'article</string>
 <string id="Create article">Créer un article</string>
 <string id="Manage topic">Gérer le thème</string>
+
+<string id="Certificate validation">Validation des certificats</string>
+<string id="Validate certificates">Valider les certificats</string>
+<string id="Suppress certificate validation">Supprimer la validation des certificats</string>
 </fr>
