--- a/ovidentia/lang/lang-en.xml
+++ b/ovidentia/lang/lang-en.xml
@@ -1649,9 +1649,10 @@ Cordially
 The administrator</string>
 <string id="Appointment modified by ">Event updated by </string>
 <string id="The article head is mandatory">The introduction is mandatory</string>
-<string id=""></string>
-<string id=""></string>
-<string id=""></string>
+
+<string id="Use category color for events">Use category color for events</string>
+<string id="Use default option">Use default option</string>
+<string id="Agenda color">Agenda color</string>
 <string id=""></string>
 <string id=""></string>
 <string id=""></string>
