--- a/ovidentia/lang/lang-fr.xml
+++ b/ovidentia/lang/lang-fr.xml
@@ -3530,4 +3530,8 @@ L'administrateur</string>
 <string id="Suppress certificate validation">Supprimer la validation des certificats</string>
 
 <string id="Please confirm your account %s">Veuillez confirmer votre compte %s</string>
+
+<string id="Use category color for events">Utiliser les couleurs de catégorie d'événements</string>
+<string id="Use default option">Utiliser l'option par défaut</string>
+<string id="Agenda color">Couleur de l'agenda</string>
 </fr>
