Add confirm form for redirection

--- a/ovidentia/lang/lang-fr.xml
+++ b/ovidentia/lang/lang-fr.xml
@@ -3533,4 +3533,5 @@ L'administrateur</string>
 <string id="Use category color for events">Utiliser les couleurs de catégorie d'événements</string>
 <string id="Use default option">Utiliser l'option par défaut</string>
 <string id="Agenda color">Couleur de l'agenda</string>
+<string id="You are going to be redirected to an external site, please confirm">Vous allez être redirigé vers un site externe, veuillez confirmer</string>
 </fr>
