--- a/ovidentia/lang/lang-fr.xml
+++ b/ovidentia/lang/lang-fr.xml
@@ -3534,4 +3534,5 @@ L'administrateur</string>
 <string id="Use default option">Utiliser l'option par défaut</string>
 <string id="Agenda color">Couleur de l'agenda</string>
 <string id="You are going to be redirected to an external site, please confirm">Vous allez être redirigé vers un site externe, veuillez confirmer</string>
+<string id="Delete logs before (dd/mm/yyyy)">Supprimer les logs avant (jj/mm/aaaa)</string>
 </fr>
