--- a/ovidentia/lang/lang-fr.xml
+++ b/ovidentia/lang/lang-fr.xml
@@ -3388,7 +3388,7 @@ Attention, les corbeilles de votre répertoire personnel vont bientôt être pur
 Cordialement,
 
 L'administrateur</string>
-<string id="Who is notified when an account is created when a user first loggin on a LDAP directory?">Qui est notifiés à la création d'un compte lors de la première authentification sur un annuaire LDAP ?</string>
+<string id="Who is notified when an account is created when a user first loggin on a LDAP directory or aactive directory or when a new user register?">Qui est notifiés à la création d'un compte lors de la première authentification sur un annuaire LDAP ou active directory ou lors de l'inscription d'un nouvelle utilisateur ?</string>
 <string id="(View selected group)">(Voir les groupes sélectionnés)</string>
 <string id="Domains">Domaines</string>
 <string id="Add a domain">Ajouter un domaine</string>
