--- a/ovidentia/lang/lang-fr.xml
+++ b/ovidentia/lang/lang-fr.xml
@@ -3549,4 +3549,6 @@ L'administrateur</string>
 <string id="The detailed history is used to build all the statistics, the history older than the limit set here is deleted by an automated task. Only the session tracking statistics need the detailed history.">L'historique détaillé est utilisé pour générer toutes les statistiques, l'historique plus vieux que la limite configurée ici est supprimé par une tâche planifiée. Seul les statisitiques des sessions nécéssite l'historique détaillé.</string>
 
 <string id="Last access: %s">Dernier accès : %s</string>
+<string id="Free disk space">Espace disque disponible</string>
+<string id="%s MB">%s Mo</string>
 </fr>
