--- a/ovidentia/lang/lang-fr.xml
+++ b/ovidentia/lang/lang-fr.xml
@@ -2599,7 +2599,7 @@
 <string id="Authentication functionality">Fonctionnalité d'authentification</string>
 <string id="PortalAuthentication::login ID must not be called directly">PortalAuthentication::login ne doit pas être appelé directement</string>
 <string id="PortalAuthentication::logout must not be called directly">PortalAuthentication::logout ne doit pas être appelé directement</string>
-<string id="Authentication methods: Form, LDAP, Active directory, Cookie">Méthode d'authentification: Formulaire, LDAP, Active directory, Cookie</string>
+<string id="Authentication methods: Form, Cookie">Méthode d'authentification: Formulaire, Cookie</string>
 <string id="Planned">Planifié(e)</string>
 <string id="Cost">Coût</string>
 <string id="Time">Temps</string>
