Allow copy of archived articles

--- a/ovidentia/lang/lang-fr.xml
+++ b/ovidentia/lang/lang-fr.xml
@@ -174,7 +174,7 @@
 <string id="Click on this image to delete selected articles">Cliquez sur cette image afin de supprimer les articles sélectionnés</string>
 <string id="Click on this image to make selected articles available to registered users home page">Cliquez sur cette image afin de proposer les articles sélectionnés pour la page d'accueil privée</string>
 <string id="Click on this image to make selected articles available to unregistered users home page">Cliquez sur cette image afin de proposer les articles sélectionnés pour la page d'accueil publique</string>
-<string id="Click on this image to move out selected articles from archive">Cliquez sur cette image pour déplacer les articles sélectionnés des archives</string>
+<string id="Unarchive selected articles">Désarchiver les articles sélectionnés</string>
 <string id="Close right">Droit fermé</string>
 <string id="Close thread">Clore le sujet</string>
 <string id="Close">Fermer</string>
